[package]
name = "mdbook_preprocessor"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.14.0"
regex = "1.12.2"
serde_json = "1.0.145"
toml = "0.5.11"

#This rename is needed because our package also has the name `mdbook_preprocessor`.
#The history is we started to have to depend on the official `mdbook-preprocessor` crate since `mdbook` 0.5.0, which is a few years after we originally created our package.
#We don't want to rename our package for backward-compatibility.
official_mdbook_preprocessor = { package = "mdbook-preprocessor", version = "0.5.1" }
